# pocket

./: Cargo.toml  manifest.json  pocket.js  pocket_bg.wasm
.github/workflows/: deploy.yml
crates/pocket_gui/: Cargo.toml  README.md
crates/pocket_gui/src/: about.rs  backend_panel.rs  database.rs  lib.rs  main.rs  wrap_app.rs
crates/pocket_minimal/: Cargo.toml
crates/pocket_minimal/src/: interface.rs  lib.rs  tree.rs  web.rs
crates/pocket_minimal/src/view/: about.rs  mod.rs
scripts/: build_web.sh  setup_web.sh  start_server.sh  wasm_size.sh
site/: CNAME  index.html  pocket.js
